--- a/src/index.html
+++ b/src/index.html
@@ -12,72 +12,79 @@
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	</head>
-	<body class="loading frame">
+	<body>
 		<main>
-			
 			<nav class="menu">
-				<a class="menu__item" href="#">Contact</a>
-				<a class="menu__item" href="#">Projects</a>
-				<a class="menu__item" href="#">About me</a>
-				<a class="menu__item" href="#">Gaming</a>
-				<a class="menu__item" href="#">Books</a>
+				<div class="burger">
+                    <img src="./svg/burger.svg" alt="Burger">
+                    <img src="./svg/search.svg" alt="Search">
+                </div>
+                <div class="logo">
+                    <img src="./svg/logo.svg" alt="Logo">
+                </div>
+                <div class="contact">
+                    <img src="./svg/contact.svg" alt="Contact">
+                </div>
 			</nav>
-			<div class="slideshow">
-				<div class="meta">
-					<span class="meta__heading">Now seeing</span>
-					<div class="meta__content">
-						<span class="meta__content-title">Gravity is a b****</span>
-						<span class="meta__content-title">Clock's not right</span>
-						<span class="meta__content-title">Hot jungle speed</span>
-						<span class="meta__content-title">Crisps gone wild</span>
-						<span class="meta__content-title">Who's Walter?</span>
-						<span class="meta__content-title">Fancy franky</span>
-						<span class="meta__content-title">Step up gurl</span>
-						<span class="meta__content-title">Cold eye</span>
-						<span class="meta__content-title">Sparkling mind</span>
-					</div>
-				</div>
-				<nav class="nav nav--prev">
-					<div class="nav__imgwrap slides">
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/1.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/2.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/3.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/4.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/5.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/6.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/7.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/8.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/9.jpg)"></div></div>
-					</div>
-					<button class="unbutton nav__text no-select">Previous</button>
-				</nav>
-				<nav class="nav nav--next">
-					<div class="nav__imgwrap slides">
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/1.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/2.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/3.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/4.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/5.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/6.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/7.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/8.jpg)"></div></div>
-						<div class="nav__img slides__img"><div class="nav__img-inner slides__img-inner" style="background-image:url(img/9.jpg)"></div></div>
-					</div>
-					<button class="unbutton nav__text no-select">Next</button>
-				</nav>
-				<div class="gallery slides">
-					<div class="gallery__img slides__img slides__img--current"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/1.jpg)"></div></div>
-					<div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/2.jpg)"></div></div>
-					<div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/3.jpg)"></div></div>
-					<div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/4.jpg)"></div></div>
-					<div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/5.jpg)"></div></div>
-					<div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/6.jpg)"></div></div>
-					<div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/7.jpg)"></div></div>
-					<div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/8.jpg)"></div></div>
-					<div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/9.jpg)"></div></div>
-				</div>
-			</div>
+
+            <section id="flash-carousel" class="fords-flash-carousel">
+                <div class="wrapper">
+                    <div class="slideshow">
+                        <div class="slideshow__content">
+                            <div class="meta">
+                                <div class="meta__nav">
+                                    <nav class="meta__nav__prev">Previous</nav>
+                                    <nav class="meta__nav__next">Next</nav>
+                                </div>
+                                <div class="meta__content">
+                                    <span class="meta__content-title">Gravity is a b****</span>
+                                    <span class="meta__content-title">Clock's not right</span>
+                                    <span class="meta__content-title">Hot jungle speed</span>
+                                    <span class="meta__content-title">Crisps gone wild</span>
+                                    <span class="meta__content-title">Who's Walter?</span>
+                                    <span class="meta__content-title">Fancy franky</span>
+                                    <span class="meta__content-title">Step up gurl</span>
+                                    <span class="meta__content-title">Cold eye</span>
+                                    <span class="meta__content-title">Sparkling mind</span>
+                                </div>
+                            </div>
+
+                        </div>
+                        <!-- <div class="meta">
+                            <span class="meta__heading">Now seeing</span>
+                            <div class="meta__nav">
+                                <nav class="meta__nav__prev">Previous</nav>
+                                <nav class="meta__nav__next">Next</nav>
+                            </div>
+                            <div class="meta__content">
+                                <span class="meta__content-title">Gravity is a b****</span>
+                                <span class="meta__content-title">Clock's not right</span>
+                                <span class="meta__content-title">Hot jungle speed</span>
+                                <span class="meta__content-title">Crisps gone wild</span>
+                                <span class="meta__content-title">Who's Walter?</span>
+                                <span class="meta__content-title">Fancy franky</span>
+                                <span class="meta__content-title">Step up gurl</span>
+                                <span class="meta__content-title">Cold eye</span>
+                                <span class="meta__content-title">Sparkling mind</span>
+                            </div>
+                        </div> -->
+                        <div class="gallery slides">
+                            <div class="gallery__img slides__img slides__img--current"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/1.jpg)"></div></div>
+                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/2.jpg)"></div></div>
+                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/3.jpg)"></div></div>
+                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/4.jpg)"></div></div>
+                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/5.jpg)"></div></div>
+                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/6.jpg)"></div></div>
+                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/7.jpg)"></div></div>
+                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/8.jpg)"></div></div>
+                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/9.jpg)"></div></div>
+                        </div>
+                    </div>
+                </div>
+        </section>
 		</main>
+
+
 		<script type="module" src="js/index.js"></script>
 	</body>
 </html>
