--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,9 @@
                     <div class="slideshow">
                         <div class="slideshow__content">
                             <div class="meta">
-                                <div class="meta__nav">
-                                    <nav class="meta__nav__prev">Previous</nav>
-                                    <nav class="meta__nav__next">Next</nav>
-                                </div>
                                 <div class="meta__content">
-                                    <span class="meta__content-title">Gravity is a b****</span>
-                                    <span class="meta__content-title">Clock's not right</span>
+                                    <span class="meta__content-title">Discover the possibilities</span>
+                                    <span class="meta__content-title">Unrivalled technology</span>
                                     <span class="meta__content-title">Hot jungle speed</span>
                                     <span class="meta__content-title">Crisps gone wild</span>
                                     <span class="meta__content-title">Who's Walter?</span>
@@ -48,26 +44,7 @@
                                     <span class="meta__content-title">Sparkling mind</span>
                                 </div>
                             </div>
-
                         </div>
-                        <!-- <div class="meta">
-                            <span class="meta__heading">Now seeing</span>
-                            <div class="meta__nav">
-                                <nav class="meta__nav__prev">Previous</nav>
-                                <nav class="meta__nav__next">Next</nav>
-                            </div>
-                            <div class="meta__content">
-                                <span class="meta__content-title">Gravity is a b****</span>
-                                <span class="meta__content-title">Clock's not right</span>
-                                <span class="meta__content-title">Hot jungle speed</span>
-                                <span class="meta__content-title">Crisps gone wild</span>
-                                <span class="meta__content-title">Who's Walter?</span>
-                                <span class="meta__content-title">Fancy franky</span>
-                                <span class="meta__content-title">Step up gurl</span>
-                                <span class="meta__content-title">Cold eye</span>
-                                <span class="meta__content-title">Sparkling mind</span>
-                            </div>
-                        </div> -->
                         <div class="gallery slides">
                             <div class="gallery__img slides__img slides__img--current"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/1.jpg)"></div></div>
                             <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/2.jpg)"></div></div>
@@ -78,6 +55,21 @@
                             <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/7.jpg)"></div></div>
                             <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/8.jpg)"></div></div>
                             <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/9.jpg)"></div></div>
+                        </div>
+                        <div class="slide__content">
+                            <div class="meta__nav">
+                                <nav class="meta__nav__prev slide__nav__button">
+                                    <img src="./svg/nav-prev.svg" alt="Previous slide">
+                                </nav>
+                                <nav class="meta__nav__next slide__nav__button">
+                                    <img src="./svg/nav-next.svg" alt="Next slide">
+                                </nav>
+                            </div>
+                            <div class="slide__info">
+                                <h4>Game Changing Benfits</h4>
+                                <p>We’ll unlock solutions to your greatest packaging challenges. We’ll design and produce your foil caps and then build the machines that 
+                                turn concepts into trusted commercial realities.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
