Make full width and finish custom styles

--- a/src/index.html
+++ b/src/index.html
@@ -28,52 +28,56 @@
 			</nav>
 
             <section id="flash-carousel" class="fords-flash-carousel">
-                <div class="wrapper">
                     <div class="slideshow">
                         <div class="slideshow__content">
-                            <div class="meta">
-                                <div class="meta__content">
-                                    <span class="meta__content-title">Discover the possibilities</span>
-                                    <span class="meta__content-title">Unrivalled technology</span>
-                                    <span class="meta__content-title">Hot jungle speed</span>
-                                    <span class="meta__content-title">Crisps gone wild</span>
-                                    <span class="meta__content-title">Who's Walter?</span>
-                                    <span class="meta__content-title">Fancy franky</span>
-                                    <span class="meta__content-title">Step up gurl</span>
-                                    <span class="meta__content-title">Cold eye</span>
-                                    <span class="meta__content-title">Sparkling mind</span>
+                            <div class="wrapper">
+                                <div class="meta">
+                                    <div class="meta__content">
+                                        <span class="meta__content-title">
+                                            <span class="number">01</span> Discover
+                                            <div class="new__line__title"><span>the </span> possibilities</div>
+                                        </span>
+                                        <span class="meta__content-title">
+                                            <span class="number">02</span>Unrivalled
+                                            <div class="new__line__title">technology</div>
+                                        </span>
+                                    </div>
+                                    <div class="slide__content">
+                                        <div class="meta__nav">
+                                            <div class="nav__buttons">
+                                                <nav class="meta__nav__prev slide__nav__button">
+                                                    <img src="./svg/nav-prev.svg" alt="Previous slide">
+                                                </nav>
+                                                <nav class="meta__nav__next slide__nav__button">
+                                                    <img src="./svg/nav-next.svg" alt="Next slide">
+                                                </nav>
+                                            </div>
+                                            <div class="progress__bar">
+                                                <div class="bar"></div>
+                                            </div>
+                                        </div>
+                                        <div class="slide__info">
+                                            <div class="slide__info-content">
+                                                <h4>Game Changing Benfits</h4>
+                                                <p>We’ll unlock solutions to your greatest packaging challenges. We’ll design and produce your foil caps and then build the machines that 
+                                                turn concepts into trusted commercial realities.</p>
+                                            </div>
+                                            <div class="slide__info-content">
+                                                <h4>Game Changing Benfits</h4>
+                                                <p>We’ll unlock solutions to your greatest packaging challenges. We’ll design and produce your foil caps and then build the machines that 
+                                                turn concepts into trusted commercial realities.</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="gallery slides">
-                            <div class="gallery__img slides__img slides__img--current"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/1.jpg)"></div></div>
-                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/2.jpg)"></div></div>
-                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/3.jpg)"></div></div>
-                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/4.jpg)"></div></div>
-                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/5.jpg)"></div></div>
-                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/6.jpg)"></div></div>
-                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/7.jpg)"></div></div>
-                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/8.jpg)"></div></div>
-                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/9.jpg)"></div></div>
-                        </div>
-                        <div class="slide__content">
-                            <div class="meta__nav">
-                                <nav class="meta__nav__prev slide__nav__button">
-                                    <img src="./svg/nav-prev.svg" alt="Previous slide">
-                                </nav>
-                                <nav class="meta__nav__next slide__nav__button">
-                                    <img src="./svg/nav-next.svg" alt="Next slide">
-                                </nav>
-                            </div>
-                            <div class="slide__info">
-                                <h4>Game Changing Benfits</h4>
-                                <p>We’ll unlock solutions to your greatest packaging challenges. We’ll design and produce your foil caps and then build the machines that 
-                                turn concepts into trusted commercial realities.</p>
-                            </div>
+                            <div class="gallery__img slides__img slides__img--current"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/Fords_hero1.jpg)"></div></div>
+                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/Fords_hero2.jpg)"></div></div>
                         </div>
                     </div>
-                </div>
-        </section>
+            </section>
 		</main>
 
 
