Add gradient to progress bar

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,9 @@
                                                 </nav>
                                             </div>
                                             <div class="progress__bar">
-                                                <div class="bar"></div>
+                                                <div class="bar">
+                                                    <div class="bar__gradient"></div>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="slide__info">
