Add new images and background

--- a/src/index.html
+++ b/src/index.html
@@ -75,8 +75,8 @@
                             </div>
                         </div>
                         <div class="gallery slides">
-                            <div class="gallery__img slides__img slides__img--current"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/Fords_hero1.jpg)"></div></div>
-                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/Fords_hero2.jpg)"></div></div>
+                            <div class="gallery__img slides__img slides__img--current"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/Fords_hero1.png)"></div></div>
+                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/Fords_hero2.png)"></div></div>
                         </div>
                     </div>
             </section>
