--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Paranoia Slideshow | Codrops</title>
+		<title>Show + Tell | Fords</title>
 		<meta name="description" content="A slideshow page layout with a filter enhanced navigation effect on the images." />
 		<meta name="keywords" content="slideshow, filter, layout, navigation, javascript, demo" />
 		<meta name="author" content="Codrops" />
@@ -52,11 +52,11 @@
                                                     <img src="./svg/nav-next.svg" alt="Next slide">
                                                 </nav>
                                             </div>
-                                            <div class="progress__bar">
+                                            <!-- <div class="progress__bar">
                                                 <div class="bar">
                                                     <div class="bar__gradient"></div>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                         <div class="slide__info">
                                             <div class="slide__info-content">
@@ -75,8 +75,8 @@
                             </div>
                         </div>
                         <div class="gallery slides">
-                            <div class="gallery__img slides__img slides__img--current"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/Fords_hero1.png)"></div></div>
-                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/Fords_hero2.png)"></div></div>
+                            <div class="gallery__img slides__img slides__img--current"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/Fords_hero1.jpg)"></div></div>
+                            <div class="gallery__img slides__img"><div class="gallery__img-inner slides__img-inner" style="background-image:url(img/Fords_hero2.jpg)"></div></div>
                         </div>
                     </div>
             </section>
